# wsitk-core

./: README.md  pyproject.toml
wsitk_core/: __init__.py  core.py
