[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsitk-core"
version = "0.1.0"
authors = [
  { name="Vlad Popovici", email="popovici@bioxlab.org" },
]
description = "Core functions for whole slide image access."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'openslide-bin >= 4.0.0',
    'openslide-python >= 1.4.0',
    'shapely >= 2.0.0'
]

[project.urls]
Homepage = "https://github.com/vladpopovici/wsitk-core"
Issues = "https://github.com/vladpopovici/wsitk-core/issues"


